Fix dashboard components on ios safari (#2067)

--- a/frontend/src/app/+dashboard/chart/chart.component.scss
+++ b/frontend/src/app/+dashboard/chart/chart.component.scss
@@ -26,6 +26,7 @@
 }
 
 .wrapper {
+  flex: 1 1 0% !important;
   padding: 0 15%;
 }
 
